tests/testfiles/Syntax_Error/Herag_Var.c
int main () {
    a = 1;
}